Extending selection outside the window with GridView triggers assertion.
If one selects multiple items, for example, in gtk4-demo Color list demo and extends selection outside the window, it triggers the following assertion
(gtk4-demo:2246): Gtk-CRITICAL **: 16:27:49.792: gtk_bitset_add_rectangle: assertion '(start % stride) + width <= stride' failed
closing the color list demo window with the selections still selected produces the following message
(gtk4-demo:2246): Gtk-WARNING **: 16:27:51.392: Finalizing GtkGridView 0x56169cec0f30, but it still has children left:
(gtk4-demo:2246): Gtk-WARNING **: 16:27:51.392: - GtkGizmo 0x56169e9f3e80